# fluentqa-spellrunner

./: .gitignore  pyproject.toml  references.yaml
docs/: How.md  di.md  di.py  reference.yaml  scope.py
docs/ai/: warp-ai.md
docs/core/: multimethods.py  registeries.py  test_multimethods.py  test_registeries.py
src/spell/clients/: __init__.py  http_clients.py
src/spell/core/: __init__.py  containers.py  exceptions.py  loaders.py
src/spell/pipeline/: data_pipeline.py
src/spell/plugins/: __init__.py  manager.py  models.py
src/spell/runner/: runners.py
tests/: meta_libs.py  method_resolvers.py  test_box.py  test_containers.py  test_http_runner.py  test_loaders.py  test_plugin_loader.py  test_spell_container.py
tests/engines/: __init__.py  invoker_service.py
